test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/mutate-pod-on-binding-request/chainsaw-step-01-apply-1-3.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  labels:
    app.kubernetes.io/component: admission-controller
    app.kubernetes.io/instance: kyverno
    app.kubernetes.io/part-of: kyverno
  name: kyverno:modify-pods
rules:
- apiGroups:
  - ""
  resources:
  - pods
  verbs:
  - update
  - patch
