test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/mutate-pod-on-binding-request/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mutate-pod-on-binding-request
spec:
  background: false
  rules:
  - context:
    - name: node
      variable:
        default: ""
        jmesPath: request.object.target.name
    - apiCall:
        jmesPath: metadata.labels.foo || 'empty'
        urlPath: /api/v1/nodes/{{node}}
      name: foolabel
    match:
      any:
      - resources:
          kinds:
          - Pod/binding
          names:
          - nginx-pod
    mutate:
      patchStrategicMerge:
        metadata:
          labels:
            foo: '{{ foolabel }}'
      targets:
      - apiVersion: v1
        kind: Pod
        name: '{{ request.name }}'
        namespace: '{{ request.namespace}}'
    name: mutate-pod-on-binding-request
    preconditions:
      all:
      - key: '{{node}}'
        operator: NotEquals
        value: ""
      - key: '{{ request.operation }}'
        operator: AnyIn
        value:
        - CREATE
        - UPDATE
