test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/mutate-pod-on-binding-request/01-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mutate-pod-on-binding-request
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
---
apiVersion: v1
kind: Namespace
metadata:
  name: test-ns
status:
  phase: Active
