test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/mutate-pod-on-binding-request/chainsaw-step-01-assert-1-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mutate-pod-on-binding-request
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
