test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/mutate-pod-on-binding-request/chainsaw-step-01-assert-1-2.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-ns
status:
  phase: Active
