test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/mutate-pod-on-binding-request/chainsaw-step-02-assert-1-1.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    foo: empty
  name: nginx-pod
  namespace: test-ns
