test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/mutate-pod-on-binding-request/99-cleanup.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: cleanup
spec:
  timeouts: {}
  try:
  - command:
      args:
      - delete
      - pod
      - nginx-pod
      - -n
      - test-ns
      - --force
      - --wait=true
      entrypoint: kubectl
    timeout: 30s
  - command:
      args:
      - delete
      - -f
      - 01-manifests.yaml
      - --force
      - --wait=true
      entrypoint: kubectl
    timeout: 30s
  - script:
      content: ./modify-resource-filters.sh addBinding
