test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/mutate-pod-on-binding-request/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: mutate-pod-on-binding-request
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: chainsaw-step-01-apply-1-1.yaml
  - name: create policy
    use:
      template: ../../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - try:
    - apply:
        file: chainsaw-step-01-apply-1-3.yaml
  - name: wait policy ready
    use:
      template: ../../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: mutate-pod-on-binding-request
  - try:
    - assert:
        file: chainsaw-step-01-assert-1-2.yaml
  - name: step-02
    try:
    - script:
        content: ./modify-resource-filters.sh removeBinding
    - command:
        args:
        - run
        - nginx-pod
        - --image=nginx
        - -n
        - test-ns
        entrypoint: kubectl
    - assert:
        file: chainsaw-step-02-assert-1-1.yaml
  - name: step-99
    try:
    - command:
        args:
        - delete
        - pod
        - nginx-pod
        - -n
        - test-ns
        - --force
        - --wait=true
        entrypoint: kubectl
        timeout: 30s
    - script:
        content: ./modify-resource-filters.sh addBinding
